# ubjson_rs

./: Cargo.toml  README.md
.kiro/specs/ubjson-library/: design.md  requirements.md  tasks.md
src/: deserializer.rs  encoding.rs  error.rs  lib.rs  serde_impl.rs  serializer.rs  types.rs  value.rs
tests/: container_optimization_spec_tests.rs  container_optimization_tests.rs  deserializer_tests.rs  encoding_tests.rs  object_key_format_tests.rs  public_api_tests.rs  serde_integration_tests.rs  serializer_tests.rs  types_tests.rs  value_tests.rs
